wtx-macros-tests/tests/fail/absent_req_or_res.rs
#[wtx::pkg]
mod a {
}

#[wtx::pkg]
mod b {
  #[pkg::req_data]
  struct Req(
    i32
  );
}

#[wtx::pkg]
mod c {
  #[pkg::res_data]
  struct Res;
}

fn main() {
}
